--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!-- <link rel="icon" href="favicon.ico"> -->
-    <link href="output.css" rel="stylesheet" type="text/css">
+    <!-- <link href="output.css" rel="stylesheet" type="text/css"> -->
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
