--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="favicon.ico">
-    <!-- <link href="output.css" rel="stylesheet" type="text/css"> -->
+    <link href="output.css" rel="stylesheet" type="text/css">
     <script type="module" src="/src/main.js"></script>
     <title>VueReader</title>
   </head>
